# lattice

./: .gitignore  .mcp.json  CLA.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.js  install.ps1  install.sh  package-lock.json  package.json  vitest.config.ts
.claude/agents/: ci-monitor.md
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  deploy-install-script.yml  pages.yml  release.yml  verify-install.yml
.lattice/: config.yaml
.lattice/implementations/: capture-001.yaml  capture-002.yaml  capture-003.yaml  capture-004.yaml  capture-005.yaml  ci-pipeline.yaml  cli-002.yaml  cli-019.yaml  cli-module.yaml  export-module.yaml  graph-module.yaml  makefile.yaml  mcp-001.yaml  release-pipeline.yaml  search-001.yaml  storage-module.yaml  types-module.yaml
.lattice/prompts/: next.md
.lattice/protocols/: refinement.md
.lattice/sources/: agent-code-generation.yaml  agent-memory-hooks.yaml  auth-patterns.yaml  blast-radius.yaml  comprehension-debt.yaml  context-eng-001.yaml  context-eng-002.yaml  context-eng-003.yaml  context-eng-004.yaml  context-eng-005.yaml  context-eng-006.yaml  graph-centrality.yaml  graphify.yaml  gws-cli.yaml  knowledge-graphs-effectiveness.yaml  requirements-drift.yaml  requirements-traceability.yaml  skills-marketplace-001.yaml  strategic-justification-loss.yaml  tools-built-for-humans.yaml
.lattice/theses/: agent-native-tools.yaml  agent-product-owner.yaml  context-infra.yaml  (+8 more)
docs/: INVESTOR_OVERVIEW.md  PRFAQ-continuous-learning.md  STRATEGIC_VISION.md
prompts/: LATTICE_CLAUDE_MD.md  LATTICE_MCP_CLAUDE_MD.md
src/: capture.rs  diff.rs  export.rs  graph.rs  html_export.rs  index.ts  lib.rs  lint.rs  main.rs  mcp.rs  push.rs  search.rs  storage.rs  types.rs  update.rs
tests/: diff_test.rs  e2e-windows.ps1  help_test.rs  html_export_test.rs  pages_export_test.rs  search_test.rs
(+100 files in other folders)
