[package]
name = "lattice"
version = "0.1.0"
edition = "2024"
description = "A knowledge coordination protocol for human-agent collaboration"
repository = "https://github.com/forkzero/lattice"
license-file = "LICENSE"

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
walkdir = "2"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tera = "1"
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
