[package]
name = "lattice"
version = "0.1.10"
edition = "2024"
description = "A knowledge coordination protocol for human-agent collaboration"
repository = "https://github.com/forkzero/lattice"
license = "Apache-2.0"

[[bin]]
name = "lattice"
path = "src/main.rs"

[features]
default = []
vector-search = ["dep:fastembed"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
walkdir = "2"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tera = "1"
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
self-replace = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"
fastembed = { version = "4", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
